FIXED OVERFLOW BEHAVIOR

--- a/src/App.css
+++ b/src/App.css
@@ -5,18 +5,21 @@
 }
 .app-container{
   min-height:100vh;
-  width:100vw;
+  max-width:100vw;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
+  /* border: 2px solid red; */
 }
+
 .navbar-div{
   height:15vh;
   width:80%;
   display: flex;
   justify-content: center;
   align-items: center;
+  /* border: 2px solid green; */
 }
 .Navbar-container{
   height:100%;
